# Serial-scanner

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DIAGNOSIS.md  FIX.md  PROJECT_STATE.md  README.md
.github/workflows/: ci.yml
cmake/: copy_dlls.cmake
include/: device.h  scan_modes.h  scanner.h
src/: device.c  main.c  scan_at.c  scan_echo.c  scan_passive.c  scanner.c
